--- a/MVC01/src/main/webapp/member/memberRegister.html
+++ b/MVC01/src/main/webapp/member/memberRegister.html
@@ -3,16 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>회원 가입 화면</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
     <br>
       <h1>회원 가입 화면</h1>
      <br>
+
+<!-- JDBC는 맛보기. 어차피 요즘 사용하지 않음. MVC 공부 용도!! -->
      
-<!-- http://localhost:8080/MVC01/member/memberRegister.html-->
-<!-- http://localhost:8080/MVC01/memberInsert.do-->
+<!-- 현재 위치 : http://localhost:8080/MVC01/member/memberRegister.html 
+ 			   <form action="memberInsert.do" method="post">라고 해버리면,   
+	 		   http://localhost:8080/MVC01/member/memberInsert.do      -->
+	 		   
+<!-- http://localhost:8080/MVC01/memberInsert.do
+	 /(슬래쉬) -> 절대경로로 입력 -->
  <form action="/MVC01/memberInsert.do" method="post">   
   <table class="table">
     <thead>
@@ -23,6 +29,7 @@
       <th scope="col"></th>
     </tr>
   </thead>
+  
   <tbody>
     <tr>
       <th scope="row">1</th>
@@ -41,7 +48,7 @@
       <td>이름</td>
       <td><input type="text" name="name"/></td>
       <td></td>
-      <!--한글데이터(김 : 2byte) -> 서블릿으로 전송(1byte + 1byte) -> 한글 깨짐  -->
+      <!--한글데이터(ex) 김 : 2byte) -> 서블릿으로 전송 시(1byte + 1byte) -> 한글 깨짐 현상 발생 -->
     </tr>
     <tr>
       <th scope="row">4</th>
